[package]
name = "randomSQL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
fake = "2.9.2"
rand = "0.8.5"
shlex = "1.3.0"
pest = "2.7.9"
pest_derive = "2.7.9"
enum-iterator = "2.1.0"
itertools = "0.12.1"

[dev-dependencies]
pest = "2.7.9"
